--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Hello World!</title>
+		<title>DAG visualization app</title>
+
+		<link rel="stylesheet" href="css/index_style.css">
 	</head>
 	<body>
-		<h1>Hello World!</h1>
-		<!-- All of the Node.js APIs are available in this renderer process. -->
-		We are using Node.js <script>document.write(process.versions.node)</script>,
-		Chromium <script>document.write(process.versions.chrome)</script>,
-		and Electron <script>document.write(process.versions.electron)</script>.
+		<div id="container">
+			<div id="title">
+				<h1>Here are the trees</h1>
+				<!-- All of the Node.js APIs are available in this renderer process. -->
+			</div>
 
+			<div id="functions">
+				 <button type="button">Crea DAG</button> 
+			</div>
+			
+			<div id="footer">
+				We are using Node.js <script>document.write(process.versions.node)</script>,
+				Chromium <script>document.write(process.versions.chrome)</script>,
+				and Electron <script>document.write(process.versions.electron)</script>.
+			</div>	
+		</div>
+		
 		<script>
 			// You can also require other files to run in this process
-			require('./renderer.js')
+			require('./js/renderer.js')
 		</script>
 	</body>
 </html>
