--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/index_style.css">
 
 		<!--Needed for cytoscape, before this, style for the container is set in index_style.css above ^ -->
-		<script src="cytoscape.js"></script>
+		<script src="./node_modules/cytoscape/dist/cytoscape.js"></script>
 
 	</head>
 	<body>
