--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 	<body>
 		<div id="container">
 			<div id="title">
-				<h1>Here are the trees</h1>
+				<h1 class="unselectable">Here are the trees</h1>
 				<!-- All of the Node.js APIs are available in this renderer process. -->
 			</div>
 			<div id="functions">
-				 <button type="button">Crea DAG</button> 
+				 <button class="unselectable" type="button">Crea DAG</button> 
 			</div>
 			<br><br>
 			<div id="cy"></div>
-			<div id="footer">
+			<div class="unselectable" id="footer">
 				We are using Node.js <script>document.write(process.versions.node)</script>,
 				Chromium <script>document.write(process.versions.chrome)</script>,
 				and Electron <script>document.write(process.versions.electron)</script>.
