--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<body>
 		<div class="container">
 			<div class="title">
-				<p style="float: right" class="unselectable">Press f11 to toggle fullscreen</p>
+				<p class="unselectable info">Press f11 to toggle fullscreen</p>
 				<h1 class="unselectable">Here are the trees</h1>
 				<!-- All of the Node.js APIs are available in this renderer process. -->
 				<div class="functions">
-					<button class="unselectable" type="button">Crea DAG</button> 
+					<button id="crea" class="unselectable" type="button">Crea DAG</button> 
 				</div>
 			</div>
 			<br>
