--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="functions">
 					<input type="file" name="file" id="file">
 					<button id="crea" class="unselectable" type="button">Crea DAG</button> 
-					<label>Search node by name:</label>
+					<label>Search node by ID:</label>
 					<input type="search" id="search-bar">
 					<button id="node-search" class="unselectable" type="button">Search</button>
 				</div>
